Keshni tozalab yangilash

--- a/index.html
+++ b/index.html
@@ -3,152 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tap to Earn</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #1a1a2e, #16213e);
-        color: white;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        overflow: hidden;
-      }
-      .container {
-        background: rgba(255, 255, 255, 0.1);
-        padding: 80px 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-        width: 330px;
-        text-align: center;
-        position: relative;
-      }
-      .bot-name {
-        position: absolute;
-        top: 15px;
-        left: 20px;
-        font-size: 20px;
-        font-weight: bold;
-        color: #c7893a;
-        text-shadow: 0 0px 10px rgb(175, 128, 9);
-      }
-      .coin-image img {
-        user-select: none;
-        -webkit-user-drag: none;
-        pointer-events: none;
-      }
-      .coin-image {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 50px;
-        font-weight: bold;
-        margin: 40px auto;
-        box-shadow: 0 5px 20px rgb(175 88 9);
-        cursor: pointer;
-        transition: transform 0.1s;
-        position: relative;
-      }
-      .coin-image:active {
-        transform: scale(0.95);
-      }
-      .stats-container {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        align-items: center;
-        justify-content: space-between;
-        margin: 10px 0;
-      }
-      .stats1{
-        font-size: 22px;
-      }
-      .stats {
-        display: flex;
-        font-size: 15px;
-        align-items: center;
-        gap: 5px;
-      }
-      .buttons-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .boost-btn,
-      .boost-panel button {
-        background: linear-gradient(to bottom, #ff9800, #e68900);
-        padding: 12px 20px;
-        font-size: 16px;
-        font-weight: bold;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3),
-          inset 0 2px 3px rgba(255, 255, 255, 0.3);
-        transition: all 0.2s ease-in-out;
-      }
-      .boost-btn:active,
-      .boost-panel button:active {
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4),
-          inset 0 3px 5px rgba(255, 255, 255, 0.1);
-        transform: scale(0.95);
-      }
-      .boost-btn:hover,
-      .boost-panel button:hover {
-        background: linear-gradient(to bottom, #ffa726, #ff9800);
-      }
-      .boost-panel {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: rgba(0, 0, 0, 0.9);
-        padding: 20px;
-        border-radius: 10px;
-        text-align: center;
-      }
-      .floating-text {
-        position: absolute;
-        font-size: 30px;
-        font-weight: bold;
-        color: gold;
-        text-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
-        animation: floatUp 1s ease-out forwards;
-        pointer-events: none; /* Matn ustida klik qilinmasligi uchun */
-      }
-
-      @keyframes floatUp {
-        0% {
-          opacity: 1;
-          transform: translateY(0);
-        }
-        100% {
-          opacity: 0;
-          transform: translateY(-30px);
-        }
-      }
-      button:active, button:focus {
-    background-color: #FFA500 !important; /* Tugma rangini o‘zgartiring */
-    outline: none !important; /* Ko‘k chiziqni olib tashlash */
-    box-shadow: none !important;
-}
-.kuchaytirish-btn:active, .kuchaytirish-btn:focus {
-    background-color: #FFA500 !important;
-    outline: none !important;
-    box-shadow: none !important;
-}
-button {
-    -webkit-tap-highlight-color: transparent;
-}
-
-    </style>
+    <title>BroCoins</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -173,101 +29,9 @@ button {
       <button onclick="upgradeBoost()">Sotib olish 🛒</button>
       <button onclick="closeBoostPanel()">orqaga ↩️</button>
     </div>
-    <script>
-      let coins = parseInt(localStorage.getItem("coins")) || 0;
-      let energy = parseInt(localStorage.getItem("energy")) || 500;
-      const maxEnergy = 500;
-      let boostLevel = parseInt(localStorage.getItem("boostLevel")) || 1;
-      let boostCost = parseInt(localStorage.getItem("boostCost")) || 100;
-      let lastEnergyRestore =
-        parseInt(localStorage.getItem("lastEnergyRestore")) || Date.now();
 
-      document.getElementById("coins").innerText = coins;
-      document.getElementById("energy").innerText = energy;
-      document.getElementById("boostLevel").innerText = boostLevel;
-      document.getElementById("boostCost").innerText = boostCost;
+    <!-- APP JS -->
 
-      function earnCoin() {
-        if (energy > 0) {
-          coins += boostLevel;
-          energy--;
-          localStorage.setItem("coins", coins);
-          localStorage.setItem("energy", energy);
-          document.getElementById("coins").innerText = coins;
-          document.getElementById("energy").innerText = energy;
-        }
-      }
-
-      function openBoostPanel() {
-        document.getElementById("boostPanel").style.display = "block";
-      }
-
-      function closeBoostPanel() {
-        document.getElementById("boostPanel").style.display = "none";
-      }
-
-      function upgradeBoost() {
-        if (coins >= boostCost) {
-          coins -= boostCost;
-          boostLevel++;
-          boostCost = Math.floor(boostCost * 1.5);
-
-          localStorage.setItem("coins", coins);
-          localStorage.setItem("boostLevel", boostLevel);
-          localStorage.setItem("boostCost", boostCost);
-
-          document.getElementById("coins").innerText = coins;
-          document.getElementById("boostLevel").innerText = boostLevel;
-          document.getElementById("boostCost").innerText = boostCost;
-        }
-      }
-
-      function restoreEnergy() {
-        let now = Date.now();
-        let elapsedMinutes = Math.floor((now - lastEnergyRestore) / 60000);
-        if (elapsedMinutes >= 5) {
-          energy = maxEnergy;
-          lastEnergyRestore = now;
-          localStorage.setItem("energy", energy);
-          localStorage.setItem("lastEnergyRestore", lastEnergyRestore);
-          document.getElementById("energy").innerText = energy;
-        }
-      }
-
-      restoreEnergy();
-      setInterval(restoreEnergy, 60000);
-      function showFloatingText(event) {
-        let floatingText = document.createElement("div");
-        floatingText.classList.add("floating-text");
-
-        // Bosilgan joyning ekrandagi koordinatalari
-        floatingText.style.left = `${event.clientX}px`;
-        floatingText.style.top = `${event.clientY}px`;
-        floatingText.innerText = `+${boostLevel}`;
-
-        document.body.appendChild(floatingText);
-
-        setTimeout(() => {
-          floatingText.remove();
-        }, 1000);
-      }
-      function earnCoin(event) {
-        if (energy > 0) {
-          coins += boostLevel;
-          energy--;
-          localStorage.setItem("coins", coins);
-          localStorage.setItem("energy", energy);
-          document.getElementById("coins").innerText = coins;
-          document.getElementById("energy").innerText = energy;
-
-          // Floating text ni chaqirish
-          showFloatingText(event);
-        }
-      }
-      document.querySelector(".kuchaytirish-btn").addEventListener("touchstart", function(event) {
-    event.preventDefault(); // Default effektni to‘xtatish
-}, {passive: true});
-
-    </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
